--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "CourseJs",
+  "name": "LearnReact",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/taata/CourseJs.git"
+    "url": "git+https://github.com/taata/LearnReact.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/taata/CourseJs/issues"
+    "url": "https://github.com/taata/LearnReact/issues"
   },
-  "homepage": "https://github.com/taata/CourseJs#readme",
+  "homepage": "https://github.com/taata/LearnReact#readme",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "webpack": "^4.1.1",
     "webpack-dev-server": "^3.1.1"
   },
