--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "git+https://github.com/taata/LearnReact.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Tainá",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/taata/LearnReact/issues"
@@ -20,13 +20,15 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
     "update": "^0.7.4",
     "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "webpack-cli": "^2.0.12"
   },
   "devDependencies": {
-    "webpack-cli": "^2.0.12"
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.7.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
